added an ant target to run teamcity ui tests